[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "uvstream"
version = "0.0.6"
authors = [
  { name="Fish7793", email="asyncfish@proton.me" },
]
description = "Simple stream processing inspired by streamz but with uvloop under the hood."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]